--- a/themes/linux-day/templates/index.html
+++ b/themes/linux-day/templates/index.html
@@ -29,7 +29,7 @@
             class="header-info-icon"
           />
           <p class="header-info-content">
-            sabato 26 ottobre
+            Sabato 26 ottobre
           </p>
         </div>
         <div class="header-info">
@@ -42,18 +42,40 @@
             Dipartimento di Ingegneria
           </p>
         </div>
+        <div class="header-info">
+          <img
+            src="{{ url::icon(name="location-2") }}"
+            alt="Aula"
+            class="header-info-icon"
+          />
+          <p class="header-info-content">
+            Aula Magna
+          </p>
+        </div>
       </div>
     </header>
-    <section>
+    <section id="register">
+      <img
+        src="{{ url::icon(name="receipt") }}"
+        alt="Registrazione"
+        id="register-icon"
+      />
+      <p id="register-content">Registrati su Eventbrite</p>
+    </section>
+    <section id="schedule">
       <h1>Programma</h1>
-      <article>
-        <p>09:00</p>
-        <h1>Registrazione partecipanti</h1>
+      <article class="schedule-entry">
+        <p class="schedule-time">09:00</p>
+        <p class="schedule-title">Registrazione partecipanti</h1>
       </article>
-      <article>
-        <p>09:00</p>
-        <h1>DiscCheckEmu: a new and open source approach to cracking legacy software</h1>
-        <p>Luca D'Amico</p>
+      <article class="schedule-entry">
+        <p class="schedule-time">09:30</p>
+        <h1></h1>
+        <p class="schedule-title">
+          DiscCheckEmu: a new and open source approach to cracking legacy
+          software
+        </p>
+        <p class="schedule-author">Luca D'Amico</p>
       </article>
     </section>
   </body>
