--- a/themes/linux-day/static/styles/main.css
+++ b/themes/linux-day/static/styles/main.css
@@ -1,38 +1,80 @@
+/* Imports ********************************************************************/
+
 @import "reset.css";
 @import "../fonts/Intro/main.css";
 @import "../fonts/Clear-Sans/main.css";
 
+
+/* Colors *********************************************************************/
+
 :root {
-    --section-vertical-padding: 25px;
-    --section-horizontal-padding: 10vw;
+    --white: #f0f0f0;
+    --black: #191919;
+    --accent-1: #0da08e;
+    --acent-2: #0063a9;
 }
+
+
+/* Typograhy ******************************************************************/
+
+p, li, h1 {
+    color: var(--black);
+}
+
+p, li {
+    font-family: "Clear Sans", sans-serif;
+    font-size: 14pt;
+}
+
+h1 {
+    font-family: "Intro", sans-serif;
+    font-size: 32pt;
+    text-transform: uppercase;
+}
+
+
+/* Icons **********************************************************************/
+
+img.icon {
+    display: inline-block;
+    width: 30px;
+    vertical-align: middle;
+}
+
+p.label {
+    display: inline-block;
+    margin: 0 0 0 10px;
+    vertical-align: middle;
+    font-weight: bold;
+}
+
+
+/* Common Layout **************************************************************/
+
+header, section {
+    padding:
+        25px
+        calc(22vw - 55px)
+        25px
+        calc(22vw - 55px)
+    ;
+}
+
+
+/* Header *********************************************************************/
 
 header {
     display: flex;
-    padding:
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-    ;
-    background-color: #0da08e;
+    background-color: var(--accent-1);
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
-}
-
-header > img {}
-
-header > div#header-content {
-    flex: wrap;
+    justify-content: space-between;
 }
 
 header > div#header-content > h1 {
-    font-family: "Intro", sans-serif;
     line-height: 1;
-    color: white;
+    color: var(--white);
     text-align: center; 
-    text-transform: uppercase;
 }
 
 header > div#header-content > h1 > span#header-title-top {
@@ -46,10 +88,8 @@ header > div#header-content > h1 > span#header-title-bottom {
 }
 
 header > div#header-content > p#header-subtitle {
-    display: inline-block;
+    display: block;
     max-width: 500px;
-    margin: 0 0 10px 0;
-    font-family: "Clear Sans", sans-serif;
     font-size: max(16pt, 2vw);
     text-align: center; 
     font-weight: bold;
@@ -59,28 +99,7 @@ header > div#header-content > div.header-info {
     margin: 10px 0 10px 0;
 }
 
-header > div#header-content > div.header-info > img.header-info-icon {
-    display: inline-block;
-    width: 30px;
-    vertical-align: middle;
-}
-
-header > div#header-content > div.header-info > p.header-info-content {
-    display: inline-block;
-    margin: 0 0 0 10px;
-    vertical-align: middle;
-    font-family: "Clear Sans", sans-serif;
-    font-weight: bold;
-    font-size: 14pt;
-}
-
 section#register {
-    padding:
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-    ;
     background-color: #0063a9;
 }
 
@@ -96,17 +115,10 @@ section#register > p#register-content {
     vertical-align: middle;
     font-family: "Clear Sans", sans-serif;
     font-weight: bold;
-    font-size: 14pt;
+    color: white;
 }
 
-section#schedule {
-    padding:
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-        var(--section-vertical-padding)
-        var(--section-horizontal-padding)
-    ;
-}
+section#schedule {}
 
 section#schedule > h1 {
     margin: 0 0 20px 0;
@@ -133,6 +145,6 @@ section#schedule > article.schedule-entry > p.schedule-author {
     font-style: italic;
 }
 
-section#workshops {
+section#more-info{
     background-color: #0da08e;
 }
