--- a/themes/linux-day/templates/index.html
+++ b/themes/linux-day/templates/index.html
@@ -118,5 +118,28 @@
         </div>
       </div>
     </section>
+    <section id="more-info">
+      <div id="more-info-container" class="container">
+        <h1>Ulteriori informazioni</h1>
+        <ul>
+          <li>
+            L'accesso all'evento è gratuito ma è richiesta la registrazione tramite
+            <a href="{{ config.extra.eventbrite_url }}">Eventbrite</a>.
+          </li>
+          <li>
+            Porta con te un laptop per partecipare attivamente alle attività
+            svolte durante i workshop.
+          </li>
+          <li>
+            Agli studenti dell'Università degli Studi di Messina saranno
+            riconosciuti 0,25 CFU.
+          </li>
+          <li>
+            Agli iscritti all'Ordine degli Ingegneri di Messina saranno
+            riconosciuti 4 CFP.
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
