--- a/themes/linux-day/templates/index.html
+++ b/themes/linux-day/templates/index.html
@@ -123,7 +123,7 @@
         <h1>Ulteriori informazioni</h1>
         <ul>
           <li>
-            L'accesso all'evento è gratuito ma è richiesta la registrazione tramite
+            L’accesso all’evento è gratuito ma è richiesta la registrazione tramite
             <a href="{{ config.extra.eventbrite_url }}">Eventbrite</a>.
           </li>
           <li>
@@ -131,11 +131,11 @@
             svolte durante i workshop.
           </li>
           <li>
-            Agli studenti dell'Università degli Studi di Messina saranno
+            Agli studenti dell’Università degli Studi di Messina saranno
             riconosciuti 0,25 CFU.
           </li>
           <li>
-            Agli iscritti all'Ordine degli Ingegneri di Messina saranno
+            Agli iscritti all’Ordine degli Ingegneri di Messina saranno
             riconosciuti 4 CFP.
           </li>
         </ul>
