--- a/themes/linux-day/static/styles/main.css
+++ b/themes/linux-day/static/styles/main.css
@@ -157,6 +157,8 @@ section#schedule div#schedule-content {
     display: flex;
     flex-wrap: wrap;
     row-gap: 15px;
+    column-gap: 30px;
+    justify-content: center;
 }
 
 section#schedule article.schedule-entry {
